--- a/force-app/main/default/layouts/Parts_Order_Line_Item__c-Parts Order Line Item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Order_Line_Item__c-Parts Order Line Item Layout.layout-meta.xml
@@ -70,6 +70,10 @@
                 <behavior>Edit</behavior>
                 <field>Order_Line_No__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CurrencyIsoCode__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
