0228 second commit cw

--- a/force-app/main/default/layouts/Parts_Shipment_Log__c-Parts Shipment Log Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Shipment_Log__c-Parts Shipment Log Layout.layout-meta.xml
@@ -34,13 +34,28 @@
                 <behavior>Edit</behavior>
                 <field>Currency__c</field>
             </layoutItems>
-        </layoutColumns>
-        <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>OwnerId</field>
+                <behavior>Required</behavior>
+                <field>PartsShipment__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Order_Confirmed_Date__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Order_Confirmed_Quantity__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Estimated_Delivery_Date__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Shipped_Quantity__c</field>
             </layoutItems>
         </layoutColumns>
+        <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
     <layoutSections>
