CXP_GCS_DiagnosticTroubleInfo_API & partsInventoryAdjustment

--- a/force-app/main/default/layouts/Parts_Inventory_Transaction__c-Parts Inventory Transaction Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Inventory_Transaction__c-Parts Inventory Transaction Layout.layout-meta.xml
@@ -35,8 +35,8 @@
                 <field>Updated_Quantity__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Transaction_Type__c</field>
+                <behavior>Required</behavior>
+                <field>Status__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
