--- a/force-app/main/default/layouts/Parts_Inventory__c-Parts Inventory Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Inventory__c-Parts Inventory Layout.layout-meta.xml
@@ -79,7 +79,10 @@
         <fields>Previous_Quantity__c</fields>
         <fields>Status__c</fields>
         <fields>Transaction_Date__c</fields>
+        <fields>CREATED_DATE</fields>
         <relatedList>Parts_Inventory_Transaction__c.Parts_Inventory__c</relatedList>
+        <sortField>CREATED_DATE</sortField>
+        <sortOrder>Desc</sortOrder>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
