--- a/force-app/main/default/layouts/Parts_Order_Line_Item__c-Parts Order Line Item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Order_Line_Item__c-Parts Order Line Item Layout.layout-meta.xml
@@ -74,6 +74,22 @@
                 <behavior>Edit</behavior>
                 <field>CurrencyIsoCode__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>DistributeCode__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>DealerCode__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>AMOSMOBISSuffix__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>OrderLineNo__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
