--- a/force-app/main/default/layouts/Parts_Order__c-Parts Order Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Order__c-Parts Order Layout.layout-meta.xml
@@ -66,6 +66,22 @@
                 <behavior>Edit</behavior>
                 <field>CurrencyIsoCode__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>DepartmentCode__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ProductRequestNumber__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>OrderRefNo__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Description__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
