--- a/force-app/main/default/layouts/Parts_Order_Line_Item__c-Parts Order Line Item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Order_Line_Item__c-Parts Order Line Item Layout.layout-meta.xml
@@ -90,6 +90,18 @@
                 <behavior>Edit</behavior>
                 <field>OrderLineNo__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>ExternalId__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CancelCode__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CancelDescription__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
