--- a/force-app/main/default/layouts/LTM__c-LTM Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/LTM__c-LTM Layout.layout-meta.xml
@@ -55,10 +55,10 @@
         <fields>NAME</fields>
         <relatedList>LTM_VIN_Patterns__c.LTM__c</relatedList>
     </relatedLists>
-    <relatedLists>
+    <!-- <relatedLists>
         <fields>NAME</fields>
         <relatedList>Repair_Labor__c.LTM__c</relatedList>
-    </relatedLists>
+    </relatedLists> -->
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
