--- a/force-app/main/default/layouts/Parts_Order__c-Parts Order Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Parts_Order__c-Parts Order Layout.layout-meta.xml
@@ -82,6 +82,10 @@
                 <behavior>Edit</behavior>
                 <field>Description__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>IsOrderRequested__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
