--- a/force-app/main/default/layouts/Product2-Product Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Product2-Product Layout.layout-meta.xml
@@ -299,10 +299,10 @@
         <fields>NAME</fields>
         <relatedList>PartsShipment__c.Shipping_Product__c</relatedList>
     </relatedLists>
-    <relatedLists>
+    <!-- <relatedLists>
         <fields>NAME</fields>
         <relatedList>Repair_Labor__c.Product__c</relatedList>
-    </relatedLists>
+    </relatedLists> -->
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
