--- a/force-app/main/default/layouts/Department__c-Department Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Department__c-Department Layout.layout-meta.xml
@@ -50,6 +50,18 @@
                 <behavior>Edit</behavior>
                 <field>NSC_Department__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>MOBISSuffix__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>DistributeCode__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>DealerCode__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
